# tinyvisionIpc

./: .gitignore  CMakeLists.txt  H264Encoder.cpp  README.md  h264Data.h  h264Encoder.h  main.cpp  rtspServer.cpp  rtspServer.h  tinyvisonIpcV1.cpp  tinyvisonIpcV1.h  yuvReader.cpp  yuvReader.h  yuvToH264Encoder.cpp  yuvToH264Encoder.h
3rd/rtsp_lib/: CMakeLists.txt  ReadMe.txt  authenticate.c  authenticate.h  comm.h  our_md5.c  our_md5.h  rtsp_demo.c  rtsp_demo.h  rtsp_lib.vcxproj  rtsp_lib.vcxproj.filters  test.c
docs/: project-overview.md
utils/: ILog.h
utils/IThread/: CMakeLists.txt  IThread.cpp  IThread.h  ThreadSafeQueue.h
utils/time_elaps/: CMakeLists.txt  time_elaps.cpp  time_elaps.h
